# Wire

./: LICENSE.md  Wire.h  WireIMXRT.cpp  WireIMXRT1176.cpp  WireIMXRT1176.h  lpi2c1176.c  lpi2c1176.h
tests/wire_master_test/: CMakeLists.txt  wire_master_test.cpp
tests/wire_master_test/toolchain/: rt1170-evkb.toolchain.cmake
tests/wire_oled_test/: CMakeLists.txt  wire_oled_test.cpp
tests/wire_slave_test/: CMakeLists.txt  wire_slave_test.cpp
